fix: 787 - change margin to gap

--- a/src/widgets/merch-catalog/ui/merch-list/merch-list.module.scss
+++ b/src/widgets/merch-catalog/ui/merch-list/merch-list.module.scss
@@ -1,4 +1,6 @@
 .wrapper {
+  display: grid;
+  gap: 24px;
   width: 100%;
 }
 
@@ -6,5 +8,4 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 24px;
-  margin-bottom: 24px;
 }
